# zk-orderbook

./: .env.example  .gitignore  Cargo.toml  README.md  foundry.toml  justfile  orders.csv  remappings.txt
apps/: Cargo.toml
apps/src/: main.rs
contracts/scripts/: Deploy.s.sol
contracts/src/: IOrderBook.sol  MockERC20.sol  OrderBook.sol
contracts/test/: OrderBook.t.sol
crates/orderbook/: Cargo.toml
crates/orderbook/src/: lib.rs
guests/: Cargo.toml  build.rs
guests/order-book/: Cargo.toml
guests/order-book/src/: main.rs
